--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "npm run build-ts && npm run lint",
+    "build-ts": "tsc",
     "test": "ts-node node_modules/tape/bin/tape test/**/*.ts",
     "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
-    "lint": "tslint -p tsconfig.json"
+    "lint": "tslint --fix --project tsconfig.json"
   },
   "author": "",
   "license": "MIT",
